some code formatting, fixed the alignment of chart-legend-color-entries for flotcharts ;)

--- a/module_flotchart/admin/scripts/flot.css
+++ b/module_flotchart/admin/scripts/flot.css
@@ -1,6 +1,6 @@
 
 
-div.flotGraph {
-    /*float: left;*/
-    border: 1px dashed gainsboro;
+div.graphBox td.legendColorBox {
+    vertical-align: top;
+    padding-top: 4px;
 }
